# bmicalculator

./: pyproject.toml
bmicalculator/: calculator.py
tests/: test_error_data.py  test_multi_dataset.py  test_single_dataset.py  test_total_overweight.py
