[tool.poetry]
name = "bmicalculator"
version = "0.1.0"
description = "Calculate BMI"
authors = ["Vardaan Shukla <vardaanshukla.9997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
